plugins {
    id 'eclipse'
    id 'java'
    id 'net.minecraftforge.gradle' version '6.0.36' apply false
    id 'fabric-loom' version '1.7-SNAPSHOT' apply false
}

subprojects {
    apply plugin: 'java'
    java.toolchain.languageVersion = JavaLanguageVersion.of(17)
    processResources {
        def rawProps = new Properties()
        rootProject.file("gradle.properties").withInputStream { rawProps.load(it) }
        def configProps = new HashMap<>(rawProps)
        inputs.properties(configProps)
        filesMatching(["fabric.mod.json", "META-INF/mods.toml"]) {
            expand(configProps)
        }
    }
}